fix font size on mobile

--- a/diagdiscuss/css/index.css
+++ b/diagdiscuss/css/index.css
@@ -96,6 +96,9 @@ a{
 		margin: 10px;
 		font-size: 0.9em;
 	}
+	.argDiv{
+		font-size: 0.85em;
+	}
 	h1 {
 		text-align: center;
 	}
